fix: page responsive resize overflow

--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -27,13 +27,14 @@ body > * {
 // it is also a grid for the logo and nav
 header {
   width: 100vw;
+  max-width: 100vw;
   grid-column: full;
   display: grid;
   vertical-align: middle;
   background-color: $brand-color;
   padding: 0.85rem;
   @media screen and (min-width: $screen-sm-min) {
-    grid-template-columns: 2fr auto;
+    grid-template-columns: auto auto;
     grid-column-gap: 1rem;
   }
 }
@@ -62,16 +63,23 @@ header > h1 {
 
 header > div > img {
   display: inline-block;
-  max-width:10%;
-  min-width:100px;
   vertical-align: middle;
-  height: auto;
-  width: auto\9;
+  width: 60px;
+  @media screen and (min-width: $screen-xs-min) {
+    width: 75px;
+  }
+  @media screen and (min-width: $screen-md-min) {
+    width: 85px;
+  }
+  @media screen and (min-width: $screen-lg-min) {
+    width: 100px;
+  }
 }
 
 header > div {
   display: inline-block;
   vertical-align: middle;
+  white-space: nowrap;
 }
 
 header > div > div {
@@ -83,7 +91,7 @@ header > div > div {
 header > div > h1 {
   display: inline-block;
   vertical-align: middle;
-  padding-bottom: 1rem;
+  padding-bottom: 0rem;
   @media screen and (min-width: $screen-sm-min) {
     padding-bottom: 0;
   }
@@ -104,31 +112,47 @@ header > div > h1 {
 
 // main menu, is a grid item
 header > nav {
+  font-size: 1.4rem;
   @media screen and (min-width: $screen-sm-min) {
     float: right;
   }
+  @media screen and (min-width: $screen-lg-min) {
+    font-size: 1.8rem;
+  }
+  align-self: middle;
+  align-content: middle;
+  align-items: center;
+  vertical-align: middle;
   ul {
     // flexbox is better than grid for distributing an unknown qty of children
+    height: 100%;
     display: flex;
     align-self: middle;
     align-content: middle;
-    align-items: middle;
+    align-items: center;
+    vertical-align: middle;
+    justify-content: right;
     li {
+      justify-content: center;
       display: flex;
+      text-align:center;
       align-items: center;
+      vertical-align: middle;
       margin-right: 2rem;
       @media screen and (min-width: $screen-sm-min) {
-        margin-right: 0;
+        margin-right: 1.5rem;
       }
       a,
       a:visited {
+        justify-content: center;
+        vertical-align: middle;
         color:rgba(255,255,255,.7);
         display: flex;
         align-items: center;
         text-decoration: none;
         border: 0;
         @media screen and (min-width: $screen-sm-min) {
-          padding: 1rem;
+
         }
         &[data-current="current page"] {
           color:rgba(255,255,255,1);
@@ -229,9 +253,9 @@ footer {
   grid-column: full;
   display: grid;
   grid-template-columns:
-    [full-start] minmax(1rem, 2fr)
-    [main-start] minmax(0, 0.25fr) [main-end]
-    minmax(1rem, 2fr) [full-end];
+    [full-start] minmax(1rem, 1fr)
+    [main-start] minmax(0, 0.125fr) [main-end]
+    minmax(1rem, 1fr) [full-end];
   background-color: $footer-bg-color;
   > small {
     grid-column: main;
