--- a/_sass/partials/_variables.scss
+++ b/_sass/partials/_variables.scss
@@ -21,6 +21,7 @@ $bold-font-weight: 600;
 $base-line-height: 1.5;
 
 // viewport breakpoints
+$screen-xs-max: 479px;
 $screen-xs-min: 480px;
 $screen-sm-min: 768px;
 $screen-md-min: 992px;
